kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app: vscode
