kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/auth-url: "https://code.shkar.noori.krd/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://code.shkar.noori.krd/oauth2/start?rd=$escaped_request_uri"
  name: ingress
spec:
  rules:
    - host: code.shkar.noori.krd
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - code.shkar.noori.krd
      secretName: ingress-cert-vscode-shkar-noori
